--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
 
   <!-- Your Site CSS -->
-  <link rel="stylesheet" href="/CSS/site.css">
+  <link rel="stylesheet" href="/css/site.css">
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
   <!-- jQuery + Bootstrap Bundle -->
