--- a/css/site.css
+++ b/css/site.css
@@ -60,6 +60,12 @@ body {
   box-shadow: 0 0 4px rgba(0,0,0,0.3); /* optional */
 }
 
+@media (max-width: 950px) {
+  .logo-jch-wrapper {
+    display: none !important;
+  }
+}
+
 .logo-chleb-footer {
   height: 25px;
   width: auto; /* Maintain aspect ratio */
